--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name" : "connect-assetmanager",
   "description" : "Middleware for Connect (node.js) for handling your static assets.",
+  "version" : "0.0.1",
   "author" : "Mathias Pettersson <mape@mape.me>",
   "engines" : ["node"],
-  "directories" : { "lib" : "lib" },
-  "main" : "lib/assetmanager",
+  "directories" : { "lib" : "./lib" },
+  "main" : "./lib/assetmanager",
   "repositories" : [
     { "type":"git", "url":"http://github.com/mape/connect-assetmanager" }
   ]
