--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description" : "Middleware for Connect (node.js) for handling your static assets.",
   "version" : "0.0.24",
   "author" : "Mathias Pettersson <mape@mape.me>",
+  "keywords": ["build", "assets", "css", "javascript"],
   "engines" : ["node"],
   "directories" : { "lib" : "./lib" },
   "main" : "./lib/assetmanager",
